# ppbb

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  RESEARCH.md
specs/kernel/: igt-i915_reg.h  igt-intel_regs.h  igt-pcu_reg.h  igt-soc-intel-regs.h  igt-xe_reg_defs.h  msr-index-blob.h  msr-tools-lib-msr.h  rdmsr-blob.c  wrmsr-blob.c
src/: msr_platform.cpp  msr_platform.h  power-balance.cpp  power-optimizer.cpp  power-optimizer.h  power-status.cpp  power-utils.cpp  power-utils.h
systemd/: power-balance.service
tests/: test_helpers.h  test_power_balance.cpp
